<resources>
    <string name="app_name">BachIsBack</string>
    <string name="database">database.db</string>

    <!-- Drawer & Menus -->
    <string name="nav_open">Ouvrir le drawer</string>
    <string name="nav_close">Fermer le drawer</string>

    <string name="delete">Supprimer</string>
    <string name="restore">Restorer</string>
    <string name="clear">Vider</string>

    <string name="label_camera">Camera</string>
    <string name="label_partitions">Partitions</string>
    <string name="label_corbeille">Corbeille</string>
    <string name="label_partition">Partition</string>
    <string name="label_photo">Photo</string>

    <string name="label_ajout_partition">Nouvelle partition</string>

    <!-- PartitionsFragment -->
    <string name="partition_deleted" formatted="true">Partition %s supprimée</string>

    <!-- AjoutPartitionDialog -->
    <string name="ajout_partition_hint">Nom</string>
</resources>
