<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/nav_graph"

    app:startDestination="@id/fragment_partitions">

    <!-- Fragments -->
    <fragment android:id="@+id/fragment_partitions"
        android:name="net.capellari.julien.bachisback.PartitionsFragment"
        android:label="@string/label_partitions"

        tools:layout="@layout/fragment_partitions">

        <!-- Actions -->
        <action android:id="@+id/action_partition_selected"
            app:destination="@id/fragment_partition" />
    </fragment>

    <fragment android:id="@+id/fragment_corbeille"
        android:name="net.capellari.julien.bachisback.CorbeilleFragment"
        android:label="@string/label_corbeille"

        tools:layout="@layout/fragment_partitions" />

    <fragment android:id="@+id/fragment_partition"
        android:name="net.capellari.julien.bachisback.PartitionFragment"
        android:label="@string/label_partition"

        tools:layout="@layout/fragment_partition">

        <!-- Arguments -->
        <argument android:name="partition_id" app:argType="integer" />

        <!-- Actions -->
        <action android:id="@+id/action_partition_to_camera"
            app:destination="@id/fragment_camera" />

        <action android:id="@+id/action_fragment_partition_to_fragment_photo"
            app:destination="@id/fragment_photo" />
    </fragment>

    <fragment android:id="@+id/fragment_camera"
        android:name="net.capellari.julien.bachisback.CameraFragment"
        android:label="@string/label_camera"

        tools:layout="@layout/fragment_camera">

        <!-- Arguments -->
        <argument android:name="partition_id" app:argType="integer" />
    </fragment>

    <fragment android:id="@+id/fragment_photo"
        android:name="net.capellari.julien.bachisback.PhotoFragment"
        android:label="@string/label_photo" >

        <!-- Arguments -->
        <argument android:name="photo_id" app:argType="integer" />
    </fragment>
</navigation>